# mybot

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
agent/: __init__.py  runner.py
examples/: run_mock.py  run_real_api.py  run_repl.py  run_with_hooks.py
providers/: __init__.py
src/mybot/: __init__.py
src/mybot/agent/: __init__.py  context.py  hooks.py  runner.py  summarize.py
src/mybot/providers/: __init__.py  base.py  mock.py  openai_compat.py
src/mybot/session/: __init__.py  metadata.py  persistence.py
src/mybot/tools/: __init__.py  examples.py  registry.py
tools/: __init__.py  base.py
