[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mybot"
version = "0.1.0"
description = "Minimal staged copy of nananobot's agent runner, for learning."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mybot = ["py.typed"]